k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: sudden-death
  name: rails
  labels:
    app: rails
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: mfujii0/slack-bots:latest
        ports:
          - containerPort: 80
        command: ["sh", "-c", "bundle exec rails s"]
        readinessProbe:
          httpGet:
            path: /
            port: 80
