k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sudden-death
  name: rails
  labels:
    app: rails
spec:
  type: NodePort
  selector:
    app: rails
  ports:
    - name: rails
      protocol: TCP
      port: 80
      targetPort: 80
